add bootstrap stylesheet

--- a/jesse-hoare-evans.html
+++ b/jesse-hoare-evans.html
@@ -2,6 +2,8 @@
 <html>
   <head>
     <title>Jesse's Page</title>
+    <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css" media="all">
+    <link href="styles.css" rel="stylesheet" type="text/css" media="all">
   </head>
   <body>
     <h1></h1>
