add initial text and links to a number of epicodus projects

--- a/jesse-hoare-evans.html
+++ b/jesse-hoare-evans.html
@@ -6,10 +6,62 @@
     <link href="styles.css" rel="stylesheet" type="text/css" media="all">
   </head>
   <body>
+    <div class="container-fluid"> <!-- main container div -->
     <h1></h1>
     <h2>About Me</h2>
+      <p>
+        Here is a little information that might help people get to know me.
+      </p>
+      <h2>Background</h2>
+        <p>
+          Here is a little background on me. I was born in <strong>Sydney, Australia</strong> in 1992 and moved to Melbourne when I was around 2. I lived there until I was 10 when my family moved to the <em>UK</em>. I lived there for 2 more years before moving back to Melbourne for another year. After that I came stateside and have lived here ever since.
+        </p>
     <h2>Epicodus Projects</h2>
-    <h2>Background</h2>
+      <p>
+        Below is a list of different projects that I have done during my first week in order of completion (oldest to most recent project)
+      </p>
+        <ol>
+          <li> <a href="https://github.com/jessehoareevans/hello-world">Hello World</a></li>
+          <li><a href="https://github.com/jessehoareevans/cookie-recipe">Cookie Recipe</a></li>
+          <li><a href="https://github.com/jessehoareevans/travel">Travel</a></li>
+          <li><a href="https://github.com/jessehoareevans/cupcakes">Cupcakes</a></li>
+          <li><a href="https://github.com/jessehoareevans/boring">Boring Lecture</a></li>
+          <li><a href="https://github.com/jessehoareevans/vacation-gbr">Great Barrier Reef</a></li>
+          <li><a href="https://github.com/jessehoareevans/wikipedia">Wikiepedia</a></li>
+        </ol>
     <h2>Interests/Hobbies</h2>
+      <p>
+      I have a number of interests and hobbies, you can see some of them below
+      </p>
+        <ul>
+          <li>Watching sports</li>
+          <li>Hiking</li>
+          <li>Snowboarding (when I have the time!)</li>
+          <li>Travelling!</li>
+          <li>Discussing sport</li>
+          <li>Playing Soccer</li>
+        </ul>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+    </div>
+    <!-- main container div -->
   </body>
 </html>
