--- a/jesse-hoare-evans.html
+++ b/jesse-hoare-evans.html
@@ -1,45 +1,68 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Jesse's Page</title>
+    <title>
+    Jesse's Page</title>
     <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css" media="all">
     <link href="styles.css" rel="stylesheet" type="text/css" media="all">
   </head>
   <body>
     <div class="container-fluid"> <!-- main container div -->
-    <h1></h1>
-    <h2>About Me</h2>
+      <div class="jumbotron">
+    <h1> <div class="title">
+    Jesse Hoare Evans</h1>
+         </div>
+    <h2> <div class="intro">Intro</h2>
       <p>
-        Here is a little information that might help people get to know me.
+        Here is a little information that might help people get to know me. I am originally from <strong>Australia</strong> but have been living in the <strong>US</strong> for 11 years now. I became a citizen in July of 2014. I hope that this page explains and shows a little bit about me!
       </p>
+      </div>
+       </div> <!-- jumbotron -->
+       <div class="well">
       <h2>Background</h2>
+       </div>
         <p>
-          Here is a little background on me. I was born in <strong>Sydney, Australia</strong> in 1992 and moved to Melbourne when I was around 2. I lived there until I was 10 when my family moved to the <em>UK</em>. I lived there for 2 more years before moving back to Melbourne for another year. After that I came stateside and have lived here ever since.
+          Here is a little background on me. I was born in <strong>Sydney, Australia</strong> in 1992 and moved to <a href="http://travel.usnews.com/Melbourne_Australia/Things_To_Do/">Melbourne</a> when I was around 2. I lived there until I was 10 when my family moved to the <em>UK</em>. I lived there for 2 more years before moving back to Melbourne for another year. After that I came stateside and have lived here ever since.
         </p>
+        <div class="well">
     <h2>Epicodus Projects</h2>
+        </div>
       <p>
         Below is a list of different projects that I have done during my first week in order of completion (oldest to most recent project)
       </p>
         <ol>
           <li> <a href="https://github.com/jessehoareevans/hello-world">Hello World</a></li>
           <li><a href="https://github.com/jessehoareevans/cookie-recipe">Cookie Recipe</a></li>
-          <li><a href="https://github.com/jessehoareevans/travel">Travel</a></li>
+          <li><a href="https://jessehoareevans.github.io/travel/">Travel</a></li>
           <li><a href="https://github.com/jessehoareevans/cupcakes">Cupcakes</a></li>
           <li><a href="https://github.com/jessehoareevans/boring">Boring Lecture</a></li>
           <li><a href="https://github.com/jessehoareevans/vacation-gbr">Great Barrier Reef</a></li>
           <li><a href="https://github.com/jessehoareevans/wikipedia">Wikiepedia</a></li>
         </ol>
+      <div class="well">
     <h2>Interests/Hobbies</h2>
+      </div>
       <p>
       I have a number of interests and hobbies, you can see some of them below
       </p>
         <ul>
           <li>Watching sports</li>
+            <ul>
+              <li>Rugby</li>
+              <li>Cricket</li>
+              <li>Football</li>
+              <li>Soccer</li>
+              <li>Favorite Teams (in no particular order)</li>
+                <ul>
+                  <li><a href="http://www.rugby.com.au/">The Wallabies</a></li>
+                  <li><a href="http://www.cricket.com.au/">Australian Cricket Team</a></li>
+                  <li><a href="http://www.seahawks.com/">Seattle Seahawks</a></li>
+                  <li> <a href="http://www.manutd.com/">Manchester United</a></li>
+                </ul>
+            </ul>
           <li>Hiking</li>
           <li>Snowboarding (when I have the time!)</li>
           <li>Travelling!</li>
-          <li>Discussing sport</li>
-          <li>Playing Soccer</li>
         </ul>
 
 
