add about me section and 2 photos

--- a/index.html
+++ b/index.html
@@ -14,23 +14,41 @@
     Jesse Hoare Evans</h1>
          </div>
     <h2> <div class="intro">Intro</h2>
-        <img class="me" src="me.jpg" alt="Jesse" height="300" />
+         </div>
+
       <p class="fun">
-        Here is a little information that might help people get to know me. I am originally from <strong>Australia</strong> but have been living in the <strong>US</strong> for 11 years now. I became a citizen in July of 2014. I hope that this page explains and shows a little bit about me!
+        <img class="me" src="me.jpg" alt="Jesse" height="300" />
+        Here is a little information that might help people get to know me. The goal of this website is to explain a brief background on myself as well as also informing you of some of my intersets and things I am currently doing. I am originally from <strong>Australia</strong> but have been living in the <strong>US</strong> for 11 years now. I became a citizen in July of 2014. I hope that this page explains and shows a little bit about me!
       </p>
-      </div>
        </div> <!-- jumbotron -->
-     <div class="col-md-4">
+     <div class="col-md-3">
+       <div class="well">
+         <h3>About Me</h3>
+       </div>
+        <img class="vy" src="Vy.jpg" alt="Vy" />
+        <p>
+          I am not to sure what to write here so I will just list off a few things that are interesting about me that I have not covered elsewhere
+          <ul>
+            <li>I recently got engaged to my longtime girlfriend (that is her in the photos)</li>
+            <li>I love to travel, the picture at the bottom is from a recent trip my fiance took, in Dublin from the guinness storehouse</li>
+            <li>I went to school and studied Criminal Justiceat WSU, Go Cougs!</li>
+            <li>Up until about 2 years ago I used to play rugby</li>
+            <li>I used to brew beer, but I still enjoy drinking it</li>
+          </ul>
+        </p>
+        <img class="guinness" src="guiness.jpg" alt="" />
+     </div>
+     <div class="col-md-3">
        <div class="well">
       <h3>Background</h3>
        </div>
        <img class="sydney" src="sydney.jpg" alt="sydney" />
         <p>
-          Here is a little background on me. I was born in <strong>Sydney, Australia</strong> in 1992 and moved to <a href="http://travel.usnews.com/Melbourne_Australia/Things_To_Do/">Melbourne</a> when I was around 2. I lived there until I was 10 when my family moved to the <em>UK</em>. I lived there for 2 more years before moving back to Melbourne for another year. After that I came stateside and have lived here ever since.
+          I was born in <strong>Sydney, Australia</strong> in 1992 and moved to <a href="http://travel.usnews.com/Melbourne_Australia/Things_To_Do/">Melbourne</a> when I was around 2. I lived there until I was 10 when my family moved to the <em>UK</em>. I lived there for 2 more years before moving back to Melbourne for another year. After that I came stateside and apart from a brief 6 month period where I resided in Belgium I have lived here ever since.
         </p>
         <img class="sydney" src="mornington.jpg" alt="mornington" />
       </div>         <!-- first column -->
-      <div class="col-md-4">
+      <div class="col-md-3">
         <div class="well">
     <h3>Epicodus Projects</h3>
         </div>
@@ -52,7 +70,7 @@
           <li><a href="https://github.com/jessehoareevans/wikipedia">Wikipedia</a></li>
         </ol>
         </div>  <!-- 2nd column -->
-        <div class="col-md-4">
+        <div class="col-md-3">
 
 
       <div class="well">
