--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
       <p class="fun">
         <img class="me" src="me.jpg" alt="Jesse" height="300" />
-        Here is a little information that might help people get to know me. The goal of this website is to explain a brief background on myself as well as also informing you of some of my intersets and things I am currently doing. I am originally from <strong>Australia</strong> but have been living in the <strong>US</strong> for 11 years now. I became a citizen in July of 2014. I hope that this page explains and shows a little bit about me!
+        Here is a little information that might help people get to know me. The goal of this website is to explain a brief background on myself as well as also informing you of some of my intersets and things I am currently doing. I am originally from <strong>Australia</strong> but have been living in the <strong>US</strong> for 11 years now. I became a citizen in July of 2014. As you can probably tell by this point I am a world citizen and love travelling. I also love eating good food, this ranges from good Thai, to pizza to a new personal favourite on wet and cold Seattle days, pho! I hope that this page explains and shows a little bit about me!
       </p>
        </div> <!-- jumbotron -->
      <div class="col-md-3">
@@ -29,11 +29,11 @@
         <p>
           I am not to sure what to write here so I will just list off a few things that are interesting about me that I have not covered elsewhere
           <ul>
-            <li>I recently got engaged to my longtime girlfriend (that is her in the photos)</li>
-            <li>I love to travel, the picture at the bottom is from a recent trip my fiance took, in Dublin from the guinness storehouse</li>
+            <li>I recently got <span class="ring">engaged</span> to my longtime girlfriend (that is her in the photos)</li>
+            <li>I love to travel, the picture at the bottom is from a recent trip my <span class="ring">fiance</span> took, in Dublin from the guinness storehouse</li>
             <li>I went to school and studied Criminal Justiceat WSU, Go Cougs!</li>
             <li>Up until about 2 years ago I used to play rugby</li>
-            <li>I used to brew beer, but I still enjoy drinking it</li>
+            <li>I used to brew beer, but I still enjoy drinking it!</li>
           </ul>
         </p>
         <img class="guinness" src="guiness.jpg" alt="" />
@@ -44,7 +44,7 @@
        </div>
        <img class="sydney" src="sydney.jpg" alt="sydney" />
         <p>
-          I was born in <strong>Sydney, Australia</strong> in 1992 and moved to <a href="http://travel.usnews.com/Melbourne_Australia/Things_To_Do/">Melbourne</a> when I was around 2. I lived there until I was 10 when my family moved to the <em>UK</em>. I lived there for 2 more years before moving back to Melbourne for another year. After that I came stateside and apart from a brief 6 month period where I resided in Belgium I have lived here ever since.
+          I was born in <strong>Sydney, Australia</strong> in 1992 and moved to <a href="http://travel.usnews.com/Melbourne_Australia/Things_To_Do/">Melbourne</a> when I was around 2. I lived there until I was 10 when my family moved to the <em>UK</em>. I lived there for 2 more years before moving back to Melbourne for another year. After that I came stateside and apart from a brief 6 month period where I resided in <span class="Be">Be</span><span class="lgi">lgi</span><span class="um">um </span> I have lived here ever since.
         </p>
         <img class="sydney" src="mornington.jpg" alt="mornington" />
       </div>         <!-- first column -->
