add more info, and photo to epicodus heading

--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
          </div>
 
       <p class="fun">
-        <img class="me" src="me.jpg" alt="Jesse" height="300" />
+        <img class="me" src="me.jpg" alt="Jesse" />
+        <img class="loony" src="loony.jpg" alt="loony" />
         Here is a little information that might help people get to know me. The goal of this website is to explain a brief background on myself as well as also informing you of some of my intersets and things I am currently doing. I am originally from <strong>Australia</strong> but have been living in the <strong>US</strong> for 11 years now. I became a citizen in July of 2014. As you can probably tell by this point I am a world citizen and love travelling. I also love eating good food, this ranges from good Thai, to pizza to a new personal favourite on wet and cold Seattle days, pho! I hope that this page explains and shows a little bit about me!
       </p>
        </div> <!-- jumbotron -->
@@ -31,7 +32,7 @@
           <ul>
             <li>I recently got <span class="ring">engaged</span> to my longtime girlfriend (that is her in the photos)</li>
             <li>I love to travel, the picture at the bottom is from a recent trip my <span class="ring">fiance</span> took, in Dublin from the guinness storehouse</li>
-            <li>I went to school and studied Criminal Justiceat WSU, Go Cougs!</li>
+            <li>I went to school and studied Criminal Justice at WSU, Go Cougs!</li>
             <li>Up until about 2 years ago I used to play rugby</li>
             <li>I used to brew beer, but I still enjoy drinking it!</li>
           </ul>
@@ -52,22 +53,27 @@
         <div class="well">
     <h3>Epicodus Projects</h3>
         </div>
+        <img class="epicodus" src="epicodus.png" alt="epicodus" />
       <p>
         Below is a list of different projects that I have done during my first week in order of completion (oldest to most recent project).
       </p>
         <ol>
           <li> <a href="https://github.com/jessehoareevans/hello-world">Hello World</a></li>
-          <ul>
             <p class="description">
               - This was the first project that I worked on. It was a simple website using html where we said "hello world" in 5 different languages. After that we added "goodbye world" in Japanese and Pig latin.
             </p>
-          </ul>
-          <li><a href="https://github.com/jessehoareevans/cookie-recipe">Cookie Recipe</a></li>
-          <li><a href="https://jessehoareevans.github.io/travel/">Travel</a></li>
+            <li><a href="https://jessehoareevans.github.io/travel/">Travel</a></li>
+            <p class="description">
+              - My resort webpage. This was a great assignment because we had to build a home page and also hyperlink 5 other webpages to this site. We also got to practice branching and merging (this was the 2nd branch that we made) as well as having a stylesheet.
+            </p>
           <li><a href="https://github.com/jessehoareevans/cupcakes">Cupcakes</a></li>
-          <li><a href="https://github.com/jessehoareevans/boring">Boring Lecture</a></li>
-          <li><a href="https://github.com/jessehoareevans/vacation-gbr">Great Barrier Reef</a></li>
+          <p class="description">
+            - For this assignment we were tasked with creating a website for a cupcake shop. We needed to incorporate images, text and links. We also needed to practice creating classes with CSS rules to make certain images or phrases stand out.
+          </p>
           <li><a href="https://github.com/jessehoareevans/wikipedia">Wikipedia</a></li>
+          <p class="description">
+            - Our final project of the week. This project asked us to incorporate bootstrap  to help make our "dummy" wikipedia page look like the real wikipedia. We utilized, divs, spans, floats, and classes as well as a grid. Overall this was a challengiung yet extremely rewarding project.
+          </p>
         </ol>
         </div>  <!-- 2nd column -->
         <div class="col-md-3">
