add more text to interests

--- a/index.html
+++ b/index.html
@@ -32,9 +32,12 @@
           <ul>
             <li>I recently got <span class="ring">engaged</span> to my longtime girlfriend (that is her in the photos)</li>
             <li>I love to travel, the picture at the bottom is from a recent trip my <span class="ring">fiance</span> took, in Dublin from the guinness storehouse</li>
+            <li>I am the 4th of 5 children</li>
             <li>I went to school and studied Criminal Justice at WSU, Go Cougs!</li>
             <li>Up until about 2 years ago I used to play rugby</li>
             <li>I used to brew beer, but I still enjoy drinking it!</li>
+            <li>I am a certified scuba diver!</li>
+            <li>My favourite color is <span class="green">green.</span></li>
           </ul>
         </p>
         <img class="guinness" src="guiness.jpg" alt="" />
@@ -46,6 +49,9 @@
        <img class="sydney" src="sydney.jpg" alt="sydney" />
         <p>
           I was born in <strong>Sydney, Australia</strong> in 1992 and moved to <a href="http://travel.usnews.com/Melbourne_Australia/Things_To_Do/">Melbourne</a> when I was around 2. I lived there until I was 10 when my family moved to the <em>UK</em>. I lived there for 2 more years before moving back to Melbourne for another year. After that I came stateside and apart from a brief 6 month period where I resided in <span class="Be">Be</span><span class="lgi">lgi</span><span class="um">um </span> I have lived here ever since.
+        </p>
+        <p>
+          The reason that I am now enrolled at Epicodus is because I woke up and day and decided that I needed a change. I finished school a few years ago now and did not really like the direction in which my work life was going. I talked to some people in the tech industry and liked what they said about it. I then did some research on different coding "bootcamps" and really liked the sound of how Epicodus is planned out so I did my best to make it happen, and as they say "the rest is history".
         </p>
         <img class="sydney" src="mornington.jpg" alt="mornington" />
       </div>         <!-- first column -->
@@ -75,10 +81,9 @@
             - Our final project of the week. This project asked us to incorporate bootstrap  to help make our "dummy" wikipedia page look like the real wikipedia. We utilized, divs, spans, floats, and classes as well as a grid. Overall this was a challengiung yet extremely rewarding project.
           </p>
         </ol>
+        <img class="brain" src="brain.jpg" alt="" />
         </div>  <!-- 2nd column -->
         <div class="col-md-3">
-
-
       <div class="well">
     <h3>Interests/Hobbies</h3>
       </div>
@@ -89,8 +94,8 @@
         <ul>
           <li>Watching sports</li>
             <ul>
-              <li>Rugby</li>
-              <li>Cricket</li>
+              <li><a href="https://en.wikipedia.org/wiki/Rugby_union">Rugby</a></li>
+              <li><a href="https://en.wikipedia.org/wiki/Cricket">Cricket</a></li>
               <li>Football</li>
               <li>Soccer</li>
               <li>Favorite Teams (in no particular order)</li>
@@ -100,12 +105,21 @@
                   <li><a href="http://www.seahawks.com/">Seattle Seahawks</a></li>
                   <li> <a href="http://www.manutd.com/">Manchester United</a></li>
                 </ul>
-
             </ul>
-
           <li>Hiking</li>
-          <li>Snowboarding (when I have the time!)</li>
-          <li>Travelling!</li>
+          <li>Binge watching netflix shows</li>
+            <ul>
+              <li>Criminal Minds</li>
+              <li>The Office</li>
+              <li>How I Met Your Mother</li>
+            </ul>
+          <li>Snowboarding</li>
+          <li>Travelling! Countries I want to go to soon</li>
+            <ul>
+              <li>South Africa</li>
+              <li>Brazil</li>
+              <li>Vietnam</li>
+            </ul>
           <img class=sydney src="travelling.jpg" alt="" />
         </ul>
           </div> <!-- 3rd column -->
