--- a/index.html
+++ b/index.html
@@ -1,148 +1,106 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>
-    Jesse's Page</title>
+  <title>Jesse's Page</title>
     <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css" media="all">
     <link href="styles.css" rel="stylesheet" type="text/css" media="all">
   </head>
   <body>
     <div class="container-fluid"> <!-- main container div -->
       <div class="row">
-      <div class="jumbotron">
-    <h1> <div class="title">
-    Jesse Hoare Evans</h1>
-         </div>
-    <h2> <div class="intro">Intro</h2>
-         </div>
-
-      <p class="fun">
-        <img class="me" src="me.jpg" alt="Jesse" />
-        <img class="loony" src="loony.jpg" alt="loony" />
-        Here is a little information that might help people get to know me. The goal of this website is to explain a brief background on myself as well as also informing you of some of my intersets and things I am currently doing. I am originally from <strong>Australia</strong> but have been living in the <strong>US</strong> for 11 years now. I became a citizen in July of 2014. As you can probably tell by this point I am a world citizen and love travelling. I also love eating good food, this ranges from good Thai, to pizza to a new personal favourite on wet and cold Seattle days, pho! I hope that this page explains and shows a little bit about me!
-      </p>
-       </div> <!-- jumbotron -->
-     <div class="col-md-3">
-       <div class="well">
-         <h3>About Me</h3>
-       </div>
-        <img class="vy" src="Vy.jpg" alt="Vy" />
-        <p>
-          I am not to sure what to write here so I will just list off a few things that are interesting about me that I have not covered elsewhere
-          <ul>
-            <li>I recently got <span class="ring">engaged</span> to my longtime girlfriend (that is her in the photos)</li>
-            <li>I love to travel, the picture at the bottom is from a recent trip my <span class="ring">fiance</span> took, in Dublin from the guinness storehouse</li>
-            <li>I am the 4th of 5 children</li>
-            <li>I went to school and studied Criminal Justice at WSU, Go Cougs!</li>
-            <li>Up until about 2 years ago I used to play rugby</li>
-            <li>I used to brew beer, but I still enjoy drinking it!</li>
-            <li>I am a certified scuba diver!</li>
-            <li>My favourite color is <span class="green">green.</span></li>
-          </ul>
-        </p>
-        <img class="guinness" src="guiness.jpg" alt="" />
-     </div>
-     <div class="col-md-3">
-       <div class="well">
-      <h3>Background</h3>
-       </div>
-       <img class="sydney" src="sydney.jpg" alt="sydney" />
-        <p>
-          I was born in <strong>Sydney, Australia</strong> in 1992 and moved to <a href="http://travel.usnews.com/Melbourne_Australia/Things_To_Do/">Melbourne</a> when I was around 2. I lived there until I was 10 when my family moved to the <em>UK</em>. I lived there for 2 more years before moving back to Melbourne for another year. After that I came stateside and apart from a brief 6 month period where I resided in <span class="Be">Be</span><span class="lgi">lgi</span><span class="um">um </span> I have lived here ever since.
-        </p>
-        <p>
-          The reason that I am now enrolled at Epicodus is because I woke up and day and decided that I needed a change. I finished school a few years ago now and did not really like the direction in which my work life was going. I talked to some people in the tech industry and liked what they said about it. I then did some research on different coding "bootcamps" and really liked the sound of how Epicodus is planned out so I did my best to make it happen, and as they say "the rest is history".
-        </p>
-        <img class="sydney" src="mornington.jpg" alt="mornington" />
-      </div>         <!-- first column -->
-      <div class="col-md-3">
-        <div class="well">
-    <h3>Epicodus Projects</h3>
+        <div class="jumbotron">
+        <h1>Jesse Hoare Evans</h1>
+        <h2>Intro</h2>
+        <p class="fun">
+        <img class="me" src="img/me.jpg" alt="Jesse"/>
+        <img class="loony" src="img/loony.jpg" alt="loony"/>
+        Here is a little information that might help people get to know me. The goal of this website is to explain a brief background on myself as well as also informing you of some of my intersets and things I am currently doing. I am originally from <strong>Australia</strong> but have been living in the <strong>US</strong> for 11 years now. I became a citizen in July of 2014. As you can probably tell by this point I am a world citizen and love travelling. I also love eating good food, this ranges from good Thai, to pizza to a new personal favourite on wet and cold Seattle days, pho! I hope that this page explains and shows a little bit about me!</p>
+        </div> <!-- jumbotron -->
+        <div class="col-md-3">
+          <div class="well">
+            <h3>About Me</h3>
+          </div>
+          <img class="vy" src="img/Vy.jpg" alt="Vy"/>
+          <p>I am not to sure what to write here so I will just list off a few things that are interesting about me that I have not covered elsewhere
+            <ul>
+              <li>I recently got <span class="ring">engaged</span> to my longtime girlfriend (that is her in the photos)</li>
+              <li>I love to travel, the picture at the bottom is from a recent trip my <span class="ring">fiance</span> took, in Dublin from the guinness storehouse</li>
+              <li>I am the 4th of 5 children</li>
+              <li>I went to school and studied Criminal Justice at WSU, Go Cougs!</li>
+              <li>Up until about 2 years ago I used to play rugby</li>
+              <li>I used to brew beer, but I still enjoy drinking it!</li>
+              <li>I am a certified scuba diver!</li>
+              <li>My favourite color is <span class="green">green.</span></li>
+            </ul>
+          </p>
+          <img class="guinness" src="img/guiness.jpg" alt=""/>
         </div>
-        <img class="epicodus" src="epicodus.png" alt="epicodus" />
-      <p>
-        Below is a list of different projects that I have done during my first week in order of completion (oldest to most recent project).
-      </p>
-        <ol>
-          <li> <a href="https://github.com/jessehoareevans/hello-world">Hello World</a></li>
-            <p class="description">
-              - This was the first project that I worked on. It was a simple website using html where we said "hello world" in 5 different languages. After that we added "goodbye world" in Japanese and Pig latin.
-            </p>
+        <div class="col-md-3">
+          <div class="well">
+            <h3>Background</h3>
+          </div>
+          <img class="sydney" src="img/sydney.jpg" alt="sydney"/>
+          <p>I was born in <strong>Sydney, Australia</strong> in 1992 and moved to <a href="http://travel.usnews.com/Melbourne_Australia/Things_To_Do/">Melbourne</a> when I was around 2. I lived there until I was 10 when my family moved to the <em>UK</em>. I lived there for 2 more years before moving back to Melbourne for another year. After that I came stateside and apart from a brief 6 month period where I resided in <span class="Be">Be</span><span class="lgi">lgi</span><span class="um">um </span> I have lived here ever since.</p>
+          <p> The reason that I am now enrolled at Epicodus is because I woke up and day and decided that I needed a change. I finished school a few years ago now and did not really like the direction in which my work life was going. I talked to some people in the tech industry and liked what they said about it. I then did some research on different coding "bootcamps" and really liked the sound of how Epicodus is planned out so I did my best to make it happen, and as they say "the rest is history".</p>
+          <img class="sydney" src="img/mornington.jpg" alt="mornington"/>
+        </div>         <!-- first column -->
+        <div class="col-md-3">
+          <div class="well">
+            <h3>Epicodus Projects</h3>
+          </div>
+          <img class="epicodus" src="img/epicodus.png" alt="epicodus"/>
+          <p>Below is a list of different projects that I have done during my first week in order of completion (oldest to most recent project).</p>
+          <ol>
+            <li> <a href="https://github.com/jessehoareevans/hello-world">Hello World</a></li>
+            <p class="description">- This was the first project that I worked on. It was a simple website using html where we said "hello world" in 5 different languages. After that we added "goodbye world" in Japanese and Pig latin.</p>
             <li><a href="https://jessehoareevans.github.io/travel/">Travel</a></li>
-            <p class="description">
-              - My resort webpage. This was a great assignment because we had to build a home page and also hyperlink 5 other webpages to this site. We also got to practice branching and merging (this was the 2nd branch that we made) as well as having a stylesheet.
-            </p>
-          <li><a href="https://github.com/jessehoareevans/cupcakes">Cupcakes</a></li>
-          <p class="description">
-            - For this assignment we were tasked with creating a website for a cupcake shop. We needed to incorporate images, text and links. We also needed to practice creating classes with CSS rules to make certain images or phrases stand out.
-          </p>
-          <li><a href="https://github.com/jessehoareevans/wikipedia">Wikipedia</a></li>
-          <p class="description">
-            - Our final project of the week. This project asked us to incorporate bootstrap  to help make our "dummy" wikipedia page look like the real wikipedia. We utilized, divs, spans, floats, and classes as well as a grid. Overall this was a challengiung yet extremely rewarding project.
-          </p>
-        </ol>
-        <img class="brain" src="brain.jpg" alt="" />
+            <p class="description">- My resort webpage. This was a great assignment because we had to build a home page and also hyperlink 5 other webpages to this site. We also got to practice branching and merging (this was the 2nd branch that we made) as well as having a stylesheet.</p>
+            <li><a href="https://github.com/jessehoareevans/cupcakes">Cupcakes</a></li>
+            <p class="description">- For this assignment we were tasked with creating a website for a cupcake shop. We needed to incorporate images, text and links. We also needed to practice creating classes with CSS rules to make certain images or phrases stand out.</p>
+            <li><a href="https://github.com/jessehoareevans/wikipedia">Wikipedia</a></li>
+            <p class="description">- Our final project of the week. This project asked us to incorporate bootstrap  to help make our "dummy" wikipedia page look like the real wikipedia. We utilized, divs, spans, floats, and classes as well as a grid. Overall this was a challengiung yet extremely rewarding project.</p>
+          </ol>
+          <img class="brain" src="img/brain.jpg" alt="" />
         </div>  <!-- 2nd column -->
         <div class="col-md-3">
-      <div class="well">
-    <h3>Interests/Hobbies</h3>
-      </div>
-      <img class=wallabies src="wallabies.jpg" alt="wallabies" />
-      <p>
-      I have a number of interests and hobbies, you can see some of them below.
-      </p>
-        <ul>
-          <li>Watching sports</li>
+          <div class="well">
+            <h3>Interests/Hobbies</h3>
+          </div>
+          <img class=wallabies src="img/wallabies.jpg" alt="wallabies"/>
+          <p>I have a number of interests and hobbies, you can see some of them below.</p>
+          <ul>
+            <li>Watching sports</li>
             <ul>
               <li><a href="https://en.wikipedia.org/wiki/Rugby_union">Rugby</a></li>
-              <li><a href="https://en.wikipedia.org/wiki/Cricket">Cricket</a></li>
+              <li><a href="https://en.wikipediagit initgi.org/wiki/Cricket">Cricket</a></li>
               <li>Football</li>
               <li>Soccer</li>
               <li>Favorite Teams (in no particular order)</li>
-                <ul>
-                  <li><a href="http://www.rugby.com.au/">The Wallabies</a></li>
-                  <li><a href="http://www.cricket.com.au/">Australian Cricket Team</a></li>
-                  <li><a href="http://www.seahawks.com/">Seattle Seahawks</a></li>
-                  <li> <a href="http://www.manutd.com/">Manchester United</a></li>
-                </ul>
+              <ul>
+                <li><a href="http://www.rugby.com.au/">The Wallabies</a></li>
+                <li><a href="http://www.cricket.com.au/">Australian Cricket Team</a></li>
+                <li><a href="http://www.seahawks.com/">Seattle Seahawks</a></li>
+                <li> <a href="http://www.manutd.com/">Manchester United</a></li>
+              </ul>
             </ul>
-          <li>Hiking</li>
-          <li>Binge watching netflix shows</li>
+            <li>Hiking</li>
+            <li>Binge watching netflix shows</li>
             <ul>
               <li>Criminal Minds</li>
               <li>The Office</li>
               <li>How I Met Your Mother</li>
             </ul>
-          <li>Snowboarding</li>
-          <li>Travelling! Countries I want to go to soon</li>
+            <li>Snowboarding</li>
+            <li>Travelling! Countries I want to go to soon</li>
             <ul>
               <li>South Africa</li>
               <li>Brazil</li>
               <li>Vietnam</li>
             </ul>
-          <img class=sydney src="travelling.jpg" alt="" />
-        </ul>
-          </div> <!-- 3rd column -->
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-  </div> <!-- row -->
+            <img class=sydney src="img/travelling.jpg" alt="" />
+          </ul>
+        </div> <!-- 3rd column -->
+      </div> <!-- row -->
     </div> <!-- main container div -->
   </body>
 </html>
